--- a/webapp/src/ionicapp/www/templates/device1WIRE.html
+++ b/webapp/src/ionicapp/www/templates/device1WIRE.html
@@ -16,36 +16,41 @@
     <div id="device1WIRE-markdown288" class="show-list-numbers-and-dots">
       <p style="color:#AAAAAA;font-size:12px;">{{ sensors_counthdr }}</p>
     </div>
-    <ion-list id="device1WIRE-list15">
-      <div class="item item-body" id="device1WIRE-list-item-container8" ng-repeat="sensor in sensors" ng-click="processSensor(sensor)">
-        <div id="device1WIRE-markdown289" class="show-list-numbers-and-dots">
+    <div class="list card" id="device1WIRE-card24" ng-repeat="sensor in sensors">
+      <div class="item item-body" id="device1WIRE-list-item-container26" ng-click="processSensor(sensor)">
+        <div id="device1WIRE-markdown426" class="show-list-numbers-and-dots">
           <p style="margin-top:0px;color:#387EF5;font-size:18px;">
             <strong> {{ sensor.sensorname }} </strong>
           </p>
         </div>
-        <div id="device1WIRE-markdown290" class="show-list-numbers-and-dots">
+        <div id="device1WIRE-markdown427" class="show-list-numbers-and-dots">
           <p style="margin-top:0px;color:#444444;font-size:10px;">{{ sensor.manufacturer }} - {{ sensor.model }}</p>
         </div>
-        <div id="device1WIRE-markdown292" class="show-list-numbers-and-dots">
-          <p style="margin-top:0px;color:#444444;font-size:10px;">{{ sensor.configured ? "CONFIGURED": "UNCONFIGURED" }} and {{ sensor.enabled ? "ENABLED": "DISABLED" }}</p>
+        <div id="device1WIRE-markdown428" class="show-list-numbers-and-dots">
+          <p style="margin-top:0px;color:#444444;font-size:10px;">{{ sensor.readings || !sensor.configured ? "" : (sensor.type=="input" ? "" : ((sensor.configured ? "CONFIGURED": "UNCONFIGURED") + " and " + (sensor.enabled ? "ENABLED": "DISABLED"))) }}</p>
         </div>
-        <div id="device1WIRE-markdown295" style="text-align:center;" class="show-list-numbers-and-dots">
+      </div>
+      <div class="item item-body" id="device1WIRE-list-item-container27" ng-click="get1WIRESensors()">
+        <div id="device1WIRE-markdown429" class="show-list-numbers-and-dots">
           <p style="margin-top:0px;color:#FFFFFF;font-size:10px;">{{ sensor.readings ? "." : "" }}</p>
         </div>
-        <div id="device1WIRE-markdown352" style="text-align:center;" class="show-list-numbers-and-dots">
+        <div id="device1WIRE-markdown430" style="text-align:center;" class="show-list-numbers-and-dots">
           <p style="margin-top:0px;color:#387EF5;font-size:35px;">
             <strong> {{ sensor.readings ? sensor.subclass ? sensor.readings.value + " " + sensor.units[0] + " | " + sensor.readings.subclass.value + " " + sensor.units[1] : sensor.readings.value + " " + sensor.units[0] : "" }} </strong>
           </p>
         </div>
-        <div id="device1WIRE-markdown353" style="text-align:center;" class="show-list-numbers-and-dots">
+        <div id="device1WIRE-markdown431" class="show-list-numbers-and-dots">
           <p style="margin-top:0px;color:#FFFFFF;font-size:10px;">{{ sensor.readings ? "." : "" }}</p>
         </div>
-        <div id="device1WIRE-markdown354" style="text-align:center;" class="show-list-numbers-and-dots">
+        <div id="device1WIRE-markdown432" style="text-align:center;" class="show-list-numbers-and-dots">
           <p style="margin-top:0px;color:#387EF5;font-size:10px;">{{ sensor.readings ? sensor.subclass ? "Low: " + sensor.readings.lowest + " " + "High: " + sensor.readings.highest + " | " + "Low: " + sensor.readings.subclass.lowest + " " + "High: " + sensor.readings.subclass.highest : "Low: " + sensor.readings.lowest
             + " " + "High: " + sensor.readings.highest : "" }}</p>
         </div>
       </div>
-    </ion-list>
+      <form id="device1WIRE-form219" class="list">
+        <ion-toggle toggle-class="toggle-positive" id="device1WIRE-toggle32" ng-show="sensor.configured" ng-model="sensor.enabled_bool" ng-click="changeDevice(sensor, sensor.enabled_bool)">.</ion-toggle>
+      </form>
+    </div>
     <button id="device1WIRE-button131" ng-click="add1WIREDevice()" class="button button-positive button-large button-block button-clear icon-right ion-android-add-circle"></button>
   </ion-content>
 </ion-view>
