--- a/webapp/src/ionicapp/www/templates/deviceTPROBE.html
+++ b/webapp/src/ionicapp/www/templates/deviceTPROBE.html
@@ -16,36 +16,41 @@
     <div id="deviceTPROBE-markdown235" class="show-list-numbers-and-dots">
       <p style="color:#AAAAAA;font-size:12px;">{{ sensors_counthdr }}</p>
     </div>
-    <ion-list id="deviceTPROBE-list13">
-      <div class="item item-body" id="deviceTPROBE-list-item-container7" ng-repeat="sensor in sensors" ng-click="processSensor(sensor)">
-        <div id="deviceTPROBE-markdown236" class="show-list-numbers-and-dots">
+    <div class="list card" id="deviceTPROBE-card23" ng-repeat="sensor in sensors">
+      <div class="item item-body" id="deviceTPROBE-list-item-container23" ng-click="processSensor(sensor)">
+        <div id="deviceTPROBE-markdown415" class="show-list-numbers-and-dots">
           <p style="margin-top:0px;color:#387EF5;font-size:18px;">
             <strong> {{ sensor.sensorname }} </strong>
           </p>
         </div>
-        <div id="deviceTPROBE-markdown237" class="show-list-numbers-and-dots">
+        <div id="deviceTPROBE-markdown416" class="show-list-numbers-and-dots">
           <p style="margin-top:0px;color:#444444;font-size:10px;">{{ sensor.manufacturer }} - {{ sensor.model }}</p>
         </div>
-        <div id="deviceTPROBE-markdown252" class="show-list-numbers-and-dots">
-          <p style="margin-top:0px;color:#444444;font-size:10px;">{{ sensor.configured ? "CONFIGURED": "UNCONFIGURED" }} and {{ sensor.enabled ? "ENABLED": "DISABLED" }}</p>
+        <div id="deviceTPROBE-markdown417" class="show-list-numbers-and-dots">
+          <p style="margin-top:0px;color:#444444;font-size:10px;">{{ sensor.readings || !sensor.configured ? "" : (sensor.type=="input" ? "" : ((sensor.configured ? "CONFIGURED": "UNCONFIGURED") + " and " + (sensor.enabled ? "ENABLED": "DISABLED"))) }}</p>
         </div>
-        <div id="deviceTPROBE-markdown350" style="text-align:center;" class="show-list-numbers-and-dots">
+      </div>
+      <div class="item item-body" id="deviceTPROBE-list-item-container24" ng-click="getTPROBESensors()">
+        <div id="deviceTPROBE-markdown418" class="show-list-numbers-and-dots">
           <p style="margin-top:0px;color:#FFFFFF;font-size:10px;">{{ sensor.readings ? "." : "" }}</p>
         </div>
-        <div id="deviceTPROBE-markdown291" style="text-align:center;" class="show-list-numbers-and-dots">
+        <div id="deviceTPROBE-markdown419" style="text-align:center;" class="show-list-numbers-and-dots">
           <p style="margin-top:0px;color:#387EF5;font-size:35px;">
             <strong> {{ sensor.readings ? sensor.subclass ? sensor.readings.value + " " + sensor.units[0] + " | " + sensor.readings.subclass.value + " " + sensor.units[1] : sensor.readings.value + " " + sensor.units[0] : "" }} </strong>
           </p>
         </div>
-        <div id="deviceTPROBE-markdown349" style="text-align:center;" class="show-list-numbers-and-dots">
+        <div id="deviceTPROBE-markdown420" style="text-align:center;" class="show-list-numbers-and-dots">
           <p style="margin-top:0px;color:#FFFFFF;font-size:10px;">{{ sensor.readings ? "." : "" }}</p>
         </div>
-        <div id="deviceTPROBE-markdown351" style="text-align:center;" class="show-list-numbers-and-dots">
+        <div id="deviceTPROBE-markdown424" style="text-align:center;" class="show-list-numbers-and-dots">
           <p style="margin-top:0px;color:#387EF5;font-size:10px;">{{ sensor.readings ? sensor.subclass ? "Low: " + sensor.readings.lowest + " " + "High: " + sensor.readings.highest + " | " + "Low: " + sensor.readings.subclass.lowest + " " + "High: " + sensor.readings.subclass.highest : "Low: " + sensor.readings.lowest
             + " " + "High: " + sensor.readings.highest : "" }}</p>
         </div>
       </div>
-    </ion-list>
+      <form id="deviceTPROBE-form218" class="list">
+        <ion-toggle toggle-class="toggle-positive" id="deviceTPROBE-toggle31" ng-show="sensor.configured" ng-model="sensor.enabled_bool" ng-click="changeDevice(sensor, sensor.enabled_bool)">.</ion-toggle>
+      </form>
+    </div>
     <button id="deviceTPROBE-button128" ng-click="addTPROBEDevice()" class="button button-positive button-large button-block button-clear icon-right ion-android-add-circle"></button>
   </ion-content>
 </ion-view>
