Fixed and improved web app UIs

--- a/webapp/src/ionicapp/SCSS/ionic.app.scss
+++ b/webapp/src/ionicapp/SCSS/ionic.app.scss
@@ -6,6 +6,10 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 	top: 35%;
 }
 
+.card_top {
+	background-color: #387EF5;
+}
+
 .page_width {
 	max-width: 500px;
 	margin: 0% auto;
