--- a/webapp/src/ionicapp/www/css/ionic.app.css
+++ b/webapp/src/ionicapp/www/css/ionic.app.css
@@ -9802,6 +9802,9 @@ a.button {
 .img_logo {
   top: 35%; }
 
+.card_top {
+  background-color: #387EF5; }
+
 .page_width {
   max-width: 500px;
   margin: 0% auto; }
