--- a/webapp/src/ionicapp/www/templates/device1WIRE.html
+++ b/webapp/src/ionicapp/www/templates/device1WIRE.html
@@ -17,17 +17,17 @@
       <p style="color:#AAAAAA;font-size:12px;">{{ sensors_counthdr }}</p>
     </div>
     <div class="list card" id="device1WIRE-card24" ng-repeat="sensor in sensors">
-      <div class="item item-body" id="device1WIRE-list-item-container26" ng-click="processSensor(sensor)">
+      <div class="item item-body card_top" id="device1WIRE-list-item-container26" ng-click="processSensor(sensor)">
         <div id="device1WIRE-markdown426" class="show-list-numbers-and-dots">
-          <p style="margin-top:0px;color:#387EF5;font-size:18px;">
+          <p style="margin-top:0px;color:#FFFFFF;font-size:18px;">
             <strong> {{ sensor.sensorname }} </strong>
           </p>
         </div>
         <div id="device1WIRE-markdown427" class="show-list-numbers-and-dots">
-          <p style="margin-top:0px;color:#444444;font-size:10px;">{{ sensor.manufacturer }} - {{ sensor.model }}</p>
+          <p style="margin-top:0px;color:#FFFFFF;font-size:10px;">{{ sensor.manufacturer }} - {{ sensor.model }}</p>
         </div>
         <div id="device1WIRE-markdown428" class="show-list-numbers-and-dots">
-          <p style="margin-top:0px;color:#444444;font-size:10px;">{{ sensor.readings || !sensor.configured ? "" : (sensor.type=="input" ? "" : ((sensor.configured ? "CONFIGURED": "UNCONFIGURED") + " and " + (sensor.enabled ? "ENABLED": "DISABLED"))) }}</p>
+          <p style="margin-top:0px;color:#FFFFFF;font-size:10px;">{{ sensor.readings || !sensor.configured ? "" : (sensor.type=="input" ? "" : ((sensor.configured ? "CONFIGURED": "UNCONFIGURED") + " and " + (sensor.enabled ? "ENABLED": "DISABLED"))) }}</p>
         </div>
       </div>
       <div class="item item-body" id="device1WIRE-list-item-container27" ng-click="get1WIRESensors()">
@@ -43,8 +43,8 @@
           <p style="margin-top:0px;color:#FFFFFF;font-size:10px;">{{ sensor.readings ? "." : "" }}</p>
         </div>
         <div id="device1WIRE-markdown432" style="text-align:center;" class="show-list-numbers-and-dots">
-          <p style="margin-top:0px;color:#387EF5;font-size:10px;">{{ sensor.readings ? sensor.subclass ? "Low: " + sensor.readings.lowest + " " + "High: " + sensor.readings.highest + " | " + "Low: " + sensor.readings.subclass.lowest + " " + "High: " + sensor.readings.subclass.highest : "Low: " + sensor.readings.lowest
-            + " " + "High: " + sensor.readings.highest : "" }}</p>
+          <p style="margin-top:0px;color:#387EF5;font-size:10px;">{{ sensor.readings ? sensor.subclass ? "Low: " + sensor.readings.lowest + " " + sensor.units[0] + " High: " + sensor.readings.highest + " " + sensor.units[0] + " | " + "Low: " + sensor.readings.subclass.lowest + " " + sensor.units[1] + " High:
+            " + sensor.readings.subclass.highest + " " + sensor.units[1] : "Low: " + sensor.readings.lowest + " " + sensor.units[0] + " High: " + sensor.readings.highest + " " + sensor.units[0] : "" }}</p>
         </div>
       </div>
       <form id="device1WIRE-form219" class="list">
